syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

message Response {
  string error = 1;
  uint32 status = 2;
}

message RegisterRequest { User user = 1; }

message User {
  uint64 userId = 1;
  string email = 2;
  string password = 3;
  string fullname = 4;
}

message RegisterResponse {
  Response response = 1;
  User user = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  Response response = 1;
  string token = 2;
}

message AuthenticateRequest { string token = 1; }
message AuthenticateResponse {
  Response response = 1;
  uint64 userId = 2;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
}